# SH-RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Include/: Common.hpp  DRay.hpp  EShapeType.hpp  FCamera.hpp  FMatDielectric.hpp  FMatLambertian.hpp  FMatMetal.hpp  FRenderWorker.hpp  FSphere.hpp  IHitable.hpp  IMaterial.hpp  MScene.hpp  XCommon.hpp  XHelperIO.hpp  XHelperJson.hpp  XSamples.hpp
Include/Helper/: EJsonExistance.hpp  XHelperIO.hpp  XHelperJson.hpp  XHelperRegex.hpp  XJsonCallback.hpp
Include/Id/: DMatId.hpp  DMeshId.hpp  DModelBufferId.hpp  DModelId.hpp
Include/Inline/: MMaterial.inl  MScene.inl  XHelperJson.inl
Include/Interface/: IHitable.hpp  IMaterial.hpp  IObject.hpp
Include/KDTree/: DObjectNode.hpp  DTreeNode.hpp
Include/Manager/: MMaterial.hpp  MModel.hpp  MScene.hpp
Include/Material/: DMatMetaExternal.hpp  FMatLight.hpp
Include/Object/: FCamera.hpp  XFunctionResults.hpp
Include/OldMaterial/: FMatDielectric.hpp  FMatLambertian.hpp  FMatMetal.hpp
Include/Resource/: DMaterialProperty.hpp  DModel.hpp  DModelBuffer.hpp  DModelFace.hpp  DModelIndex.hpp  DModelMesh.hpp  DModelPrefab.hpp
Include/Shape/: EShapeType.hpp  FBox.hpp  FCapsule.hpp  FCone.hpp  FModel.hpp  FModelMesh.hpp  FModelPrefab.hpp  FPlane.hpp  FSphere.hpp  FTorus.hpp  PModelCtor.hpp
Source/: DMatId.cc  DModelId.cc  FCamera.cc  FMatDielectric.cc  FMatLambertian.cc  FMatMetal.cc  FRenderWorker.cc  FSphere.cc  MScene.cc  Main.cc  XCommon.cc  XHelperIO.cc  XHelperJson.cc  XMain.cc  XSamples.cc
Source/Helper/: XHelperIO.cc  XHelperJson.cc  XHelperRegex.cc  XTinyObj.cc
Source/Id/: DMatId.cc  DMeshId.cc  DModelBufferId.cc  DModelId.cc
Source/Interface/: IHitable.cc  IMaterial.cc  IObject.cc
Source/KDTree/: DObjectNode.cc  DTreeNode.cc
Source/Manager/: MMaterial.cc  MModel.cc  MScene.cc
Source/Material/: DMatMetaExternal.cc  FMatLight.cc
Source/Object/: FCamera.cc
Source/OldMaterial/: FMatDielectric.cc  FMatLambertian.cc  FMatMetal.cc
Source/Resource/: DModel.cc  DModelBuffer.cc  DModelMesh.cc  DModelPrefab.cc
Source/Shape/: FBox.cc  FCapsule.cc  FCone.cc  FModel.cc  FModelMesh.cc  FModelPrefab.cc  FPlane.cc  FSphere.cc  FTorus.cc  PModelCtor.cc
